--- a/notebooks/eliana.ipynb
+++ b/notebooks/eliana.ipynb
@@ -58,15 +58,10 @@
     "\n",
     "5. Support Fact-Checking Organizations with Efficient Tools:\n",
     "\n",
-    "Enable fact-checking organizations to use machine learning models like RoBERTa and Naïve Bayes to automate the verification of news, increasing operational efficiency and response times to counter fake news."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29d3ef1f",
-   "metadata": {},
-   "source": [
-    "### Data source\n",
+    "Enable fact-checking organizations to use machine learning models like RoBERTa and Naïve Bayes to automate the verification of news, increasing operational efficiency and response times to counter fake news.\n",
+    "\n",
+    "#### Data Source\n",
+    "\n",
     "We use 4 labelled datasets \n",
     "- gossipcop_fake.csv\n",
     "-  gossipcop_real.csv\n",
@@ -85,7 +80,7 @@
     "\n",
     " ● tweet _id: twitter profile id that shared the link to the social media platform.\n",
     "\n",
-    "### Web Scraping\n",
+    "#### Web Scraping\n",
     "A Python script (scraper.py) is created to scrape text from URLs in the 4 datasets. The script includes:\n",
     "\n",
     "- fetch\\_article\\_text(url): Sends a GET request with a browser-mimicking user-agent to avoid blocks. It parses the HTML, extracts paragraph (<p>) text, and combines it into an article body. Exceptions are handled for request failures or timeouts.\n",
@@ -103,10 +98,7 @@
     "The datasets are merged into a working dataset (16044, 5):\n",
     "\n",
     "* **Features**: news\\_url, title, extracted\\_article\\_text, news\\_type\n",
-    "* **Target**: class\n",
-    "\n",
-    "\n",
-    "\n"
+    "* **Target**: class"
    ]
   },
   {
@@ -439,13 +431,12 @@
    "id": "d83d289b",
    "metadata": {},
    "source": [
-    "### Data Preprocessing for Fake News Detection: Summary\n",
     "\n",
     "To prepare the dataset for fake news detection, the following preprocessing steps will be undertaken:\n",
     "\n",
     "1. **Handling Missing Data**:\n",
     "\n",
-    "   * Check for and handle any missing values (though none are expected based on the current dataset).\n",
+    "   * Check for and handle any missing values \n",
     "\n",
     "2. **Text Preprocessing**:\n",
     "\n",
@@ -454,7 +445,6 @@
     "   * **Removing Stop Words**: Remove common, non-informative words (e.g., “the,” “and,” “of”) from the text.\n",
     "   * **Tokenization**: Split the text into individual words (tokens).\n",
     "   * **Stemming/Lemmatization**: Reduce words to their root form (e.g., \"running\" → \"run\").\n",
-    "   * **Removing URLs & Numbers**: Eliminate URLs and numerical data, as they are usually not relevant for classification.\n",
     "\n",
     "3. **Feature Engineering**:\n",
     "\n",
@@ -481,6 +471,336 @@
     "8. **Handling Class Imbalance (Optional)**:\n",
     "\n",
     "   * If the dataset shows an imbalance between real and fake news articles, techniques like oversampling, undersampling, or using algorithms designed for imbalanced datasets may be applied."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d980fb1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values:\n",
+      " news_url                  0\n",
+      "title                     0\n",
+      "extracted_article_text    0\n",
+      "news_type                 0\n",
+      "class                     0\n",
+      "dtype: int64\n",
+      "Number of Duplicate Rows: 928\n",
+      "Data Types:\n",
+      " news_url                  object\n",
+      "title                     object\n",
+      "extracted_article_text    object\n",
+      "news_type                 object\n",
+      "class                      int64\n",
+      "dtype: object\n",
+      "Unique Values in Each Column:\n",
+      " {'news_url': 15076, 'title': 14925, 'extracted_article_text': 14036, 'news_type': 2, 'class': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking for missing values\n",
+    "missing_values = data.isnull().sum()\n",
+    "print(\"Missing Values:\\n\", missing_values)\n",
+    "\n",
+    "\n",
+    "# checking for duplicate rows\n",
+    "duplicate_rows = data.duplicated().sum()\n",
+    "print(\"Number of Duplicate Rows:\", duplicate_rows)\n",
+    "\n",
+    "# checking data types of each column\n",
+    "data_types = data.dtypes\n",
+    "print(\"Data Types:\\n\", data_types)\n",
+    "\n",
+    "# checking for unique values in each column\n",
+    "unique_values = {col: data[col].nunique() for col in data.columns}\n",
+    "print(\"Unique Values in Each Column:\\n\", unique_values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2c9f8f39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               title  \\\n",
+      "0  will 'the royals' return for season 5? this st...   \n",
+      "1  naya rivera refiles for divorce from ryan dors...   \n",
+      "2    outfit ideas for taylor swift's reputation tour   \n",
+      "3  scott hutchison dead: frightened rabbit frontm...   \n",
+      "4  kate middleton gives birth to royal baby no. 3...   \n",
+      "\n",
+      "                              extracted_article_text  \n",
+      "0  entertainment with a royal wedding and a coup ...  \n",
+      "1  this material may not be published, broadcast,...  \n",
+      "2  united by pop - united kingdom. united states....  \n",
+      "3  by robert mitchell a body found thursday night...  \n",
+      "4  baby no. 3 is officially here! kate middleton ...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert text in 'title' and 'extracted_article_text' columns to lowercase\n",
+    "\n",
+    "data['title'] = data['title'].str.lower()\n",
+    "data['extracted_article_text'] = data['extracted_article_text'].str.lower()\n",
+    "print(data[['title', 'extracted_article_text']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35ba0b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               title  \\\n",
+      "0  will the royals return for season 5 this story...   \n",
+      "1  naya rivera refiles for divorce from ryan dors...   \n",
+      "2     outfit ideas for taylor swifts reputation tour   \n",
+      "3  scott hutchison dead frightened rabbit frontma...   \n",
+      "4  kate middleton gives birth to royal baby no 3 ...   \n",
+      "\n",
+      "                              extracted_article_text  \n",
+      "0  entertainment with a royal wedding and a coup ...  \n",
+      "1  this material may not be published broadcast r...  \n",
+      "2  united by pop  united kingdom united states un...  \n",
+      "3  by robert mitchell a body found thursday night...  \n",
+      "4  baby no 3 is officially here kate middleton an...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to remove punctuation and special characters\n",
+    "\n",
+    "import re\n",
+    "def clean_text(text):\n",
+    "    return re.sub(r'[^a-zA-Z0-9\\s]', '', text)\n",
+    "data['title'] = data['title'].apply(clean_text)\n",
+    "data['extracted_article_text'] = data['extracted_article_text'].apply(clean_text)\n",
+    "print(data[['title', 'extracted_article_text']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a2429014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\HomePC\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               title  \\\n",
+      "0                   royals return season 5 story far   \n",
+      "1  naya rivera refiles divorce ryan dorsey domest...   \n",
+      "2         outfit ideas taylor swifts reputation tour   \n",
+      "3  scott hutchison dead frightened rabbit frontma...   \n",
+      "4        kate middleton gives birth royal baby 3 boy   \n",
+      "\n",
+      "                              extracted_article_text  \n",
+      "0  entertainment royal wedding coup occurring sea...  \n",
+      "1  material may published broadcast rewritten red...  \n",
+      "2  united pop united kingdom united states united...  \n",
+      "3  robert mitchell body found thursday night miss...  \n",
+      "4  baby 3 officially kate middleton prince willia...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove stop words\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "# Function to remove stopwords from text\n",
+    "def remove_stopwords(text):\n",
+    "    return ' '.join([word for word in text.split() if word not in stop_words])\n",
+    "data['title'] = data['title'].apply(remove_stopwords)\n",
+    "data['extracted_article_text'] = data['extracted_article_text'].apply(remove_stopwords)\n",
+    "print(data[['title', 'extracted_article_text']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4217cce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\HomePC\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                        title_tokens  \\\n",
+      "0            [royals, return, season, 5, story, far]   \n",
+      "1  [naya, rivera, refiles, divorce, ryan, dorsey,...   \n",
+      "2  [outfit, ideas, taylor, swifts, reputation, tour]   \n",
+      "3  [scott, hutchison, dead, frightened, rabbit, f...   \n",
+      "4  [kate, middleton, gives, birth, royal, baby, 3...   \n",
+      "\n",
+      "                       extracted_article_text_tokens  \n",
+      "0  [entertainment, royal, wedding, coup, occurrin...  \n",
+      "1  [material, may, published, broadcast, rewritte...  \n",
+      "2  [united, pop, united, kingdom, united, states,...  \n",
+      "3  [robert, mitchell, body, found, thursday, nigh...  \n",
+      "4  [baby, 3, officially, kate, middleton, prince,...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenization of text into individual words\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "nltk.download('punkt')\n",
+    "def tokenize_text(text):\n",
+    "    return word_tokenize(text)\n",
+    "data['title_tokens'] = data['title'].apply(tokenize_text)\n",
+    "data['extracted_article_text_tokens'] = data['extracted_article_text'].apply(tokenize_text)\n",
+    "print(data[['title_tokens', 'extracted_article_text_tokens']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bef77f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\HomePC\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\HomePC\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                    title_lemmatized  \\\n",
+      "0             [royal, return, season, 5, story, far]   \n",
+      "1  [naya, rivera, refiles, divorce, ryan, dorsey,...   \n",
+      "2    [outfit, idea, taylor, swift, reputation, tour]   \n",
+      "3  [scott, hutchison, dead, frightened, rabbit, f...   \n",
+      "4  [kate, middleton, give, birth, royal, baby, 3,...   \n",
+      "\n",
+      "                   extracted_article_text_lemmatized  \n",
+      "0  [entertainment, royal, wedding, coup, occurrin...  \n",
+      "1  [material, may, published, broadcast, rewritte...  \n",
+      "2  [united, pop, united, kingdom, united, state, ...  \n",
+      "3  [robert, mitchell, body, found, thursday, nigh...  \n",
+      "4  [baby, 3, officially, kate, middleton, prince,...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def lemmatize_text(tokens):\n",
+    "    return [lemmatizer.lemmatize(word) for word in tokens]\n",
+    "\n",
+    "data['title_lemmatized'] = data['title_tokens'].apply(lemmatize_text)\n",
+    "data['extracted_article_text_lemmatized'] = data['extracted_article_text_tokens'].apply(lemmatize_text)\n",
+    "\n",
+    "print(data[['title_lemmatized', 'extracted_article_text_lemmatized']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "004f075a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   title_text_length  title_word_count  title_sentence_count  \\\n",
+      "0                 32                 6                     1   \n",
+      "1                 63                 9                     1   \n",
+      "2                 42                 6                     1   \n",
+      "3                 73                10                     1   \n",
+      "4                 43                 8                     1   \n",
+      "\n",
+      "   title_character_count  article_text_length  article_word_count  \\\n",
+      "0                     27                 2414                 368   \n",
+      "1                     55                 1737                 238   \n",
+      "2                     37                 5688                 848   \n",
+      "3                     64                 3992                 556   \n",
+      "4                     36                 1318                 189   \n",
+      "\n",
+      "   article_sentence_count  article_character_count  \n",
+      "0                       1                     2047  \n",
+      "1                       1                     1500  \n",
+      "2                       1                     4841  \n",
+      "3                       1                     3437  \n",
+      "4                       1                     1130  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate text length, word count, sentence count, and character count\n",
+    "\n",
+    "def calculate_text_features(text):\n",
+    "    # Tokenize the text into words and sentences\n",
+    "    words = text.split()\n",
+    "    sentences = nltk.sent_tokenize(text)\n",
+    "    \n",
+    "    # Calculate the features\n",
+    "    text_length = len(text)\n",
+    "    word_count = len(words)\n",
+    "    sentence_count = len(sentences)\n",
+    "    character_count = sum(len(word) for word in words) \n",
+    "\n",
+    "    return pd.Series([text_length, word_count, sentence_count, character_count])\n",
+    "\n",
+    "data[['title_text_length', 'title_word_count', 'title_sentence_count', 'title_character_count']] = data['title'].apply(calculate_text_features)\n",
+    "data[['article_text_length', 'article_word_count', 'article_sentence_count', 'article_character_count']] = data['extracted_article_text'].apply(calculate_text_features)\n",
+    "\n",
+    "print(data[['title_text_length', 'title_word_count', 'title_sentence_count', 'title_character_count',\n",
+    "            'article_text_length', 'article_word_count', 'article_sentence_count', 'article_character_count']].head())\n"
    ]
   }
  ],
